# ublinter

./: .gitignore  CMakeLists.txt  Makefile  README.md  checkunusedfunctions.h  library.h  lintdivision.cpp  lintsignedvar.cpp  lintuninitvar.cpp  main.cpp  runastyle  testrunner.cpp  ublinter.py
test/: division.c  integeroverflow.c  signed1.c  uninit-alias.c  uninit-array.c  uninit-array1.c  uninit-flow.c  uninit-flow1.c  uninit-flow2.c  uninit-flow3.c  uninit-flow4.c  uninit-flow5.c  uninit-function.c  uninit-malloc.c  uninit-operations.c  uninit-pointer.c  uninit-pointer1.c  uninit-struct.c  uninit-struct1.c  uninit-struct2.c
